add integration test for create new room
