# service/src/main/resources/api.yml
@@ -75,19 +75,22 @@ components:
     ResponseError:
       type: object
       required:
-        - code
-        - message
+        - field
+        - errorCode
       properties:
-        code:
-          type: integer
-          format: int32
-        status:
+        field:
           type: string
-        message:
+        errorCode:
           type: string
   responses:
     UnprocessableEntity:
       description: The server understands the content type of the request entity but was unable to process the contained intructions.
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/ResponseError'
   securitySchemes:
     BasicAuth:
       type: http
